# src/static/swagger.yml
@@ -246,6 +246,21 @@ paths:
           schema:
             type: string
           example: Subscriber
+        - name: is_privileged
+          in: query
+          required: true
+          description: Наличие дополнительных прав
+          schema:
+            type: boolean
+          example: False
+        - name: is_superuser
+          in: query
+          required: true
+          description: Суперпользователь
+          schema:
+            type: boolean
+          example: False
+
       responses:
         '200':
           description: Success
@@ -266,6 +281,8 @@ components:
       required:
         - name
         - id
+        - is_superuser
+        - is_privileged
       properties:
         id:
           type: string
@@ -273,6 +290,12 @@ components:
         name:
           type: string
           example: Admin
+        is_superuser:
+          type: boolean
+          example: False
+        is_privileged:
+          type: boolean
+          example: False
 
     Roles:
       type: array
